; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_usb.c_zd_usb_disable_tx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_usb.c_zd_usb_disable_tx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zd_usb = type { %struct.zd_usb_tx }
%struct.zd_usb_tx = type { i64, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zd_usb_disable_tx(%struct.zd_usb* %0) #0 {
  %2 = alloca %struct.zd_usb*, align 8
  %3 = alloca %struct.zd_usb_tx*, align 8
  %4 = alloca i64, align 8
  store %struct.zd_usb* %0, %struct.zd_usb** %2, align 8
  %5 = load %struct.zd_usb*, %struct.zd_usb** %2, align 8
  %6 = getelementptr inbounds %struct.zd_usb, %struct.zd_usb* %5, i32 0, i32 0
  store %struct.zd_usb_tx* %6, %struct.zd_usb_tx** %3, align 8
  %7 = load %struct.zd_usb_tx*, %struct.zd_usb_tx** %3, align 8
  %8 = getelementptr inbounds %struct.zd_usb_tx, %struct.zd_usb_tx* %7, i32 0, i32 4
  %9 = call i32 @atomic_set(i32* %8, i32 0)
  %10 = load %struct.zd_usb_tx*, %struct.zd_usb_tx** %3, align 8
  %11 = getelementptr inbounds %struct.zd_usb_tx, %struct.zd_usb_tx* %10, i32 0, i32 3
  %12 = call i32 @usb_kill_anchored_urbs(i32* %11)
  %13 = load %struct.zd_usb_tx*, %struct.zd_usb_tx** %3, align 8
  %14 = getelementptr inbounds %struct.zd_usb_tx, %struct.zd_usb_tx* %13, i32 0, i32 1
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @spin_lock_irqsave(i32* %14, i64 %15)
  %17 = load %struct.zd_usb_tx*, %struct.zd_usb_tx** %3, align 8
  %18 = getelementptr inbounds %struct.zd_usb_tx, %struct.zd_usb_tx* %17, i32 0, i32 2
  %19 = call i32 @skb_queue_empty(i32* %18)
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = zext i1 %21 to i32
  %23 = call i32 @WARN_ON(i32 %22)
  %24 = load %struct.zd_usb_tx*, %struct.zd_usb_tx** %3, align 8
  %25 = getelementptr inbounds %struct.zd_usb_tx, %struct.zd_usb_tx* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  %28 = zext i1 %27 to i32
  %29 = call i32 @WARN_ON(i32 %28)
  %30 = load %struct.zd_usb_tx*, %struct.zd_usb_tx** %3, align 8
  %31 = getelementptr inbounds %struct.zd_usb_tx, %struct.zd_usb_tx* %30, i32 0, i32 0
  store i64 0, i64* %31, align 8
  %32 = load %struct.zd_usb_tx*, %struct.zd_usb_tx** %3, align 8
  %33 = getelementptr inbounds %struct.zd_usb_tx, %struct.zd_usb_tx* %32, i32 0, i32 1
  %34 = load i64, i64* %4, align 8
  %35 = call i32 @spin_unlock_irqrestore(i32* %33, i64 %34)
  ret void
}

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i32 @usb_kill_anchored_urbs(i32*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @skb_queue_empty(i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
